# tablic

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  config.py  docker-compose.yml  package.json  setup.py  vue.config.js
backend/: .dockerignore  .gitignore  .pylintrc  Dockerfile  Pipfile  pyproject.toml  requirements.txt
backend/app/: config.py  logging.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: auth.py  user.py
backend/app/api/v1/endpoints/table/: __init__.py  (+2 more)
backend/app/crud/: __init__.py  auth.py  base.py  messages.py  table.py  tables.py  user.py  users.py
backend/app/db/: __init__.py  mongodb.py
backend/app/exceptions/: __init__.py  auth.py
backend/app/helpers/: auth.py
backend/app/helpers/auth/: __init__.py  password.py  token.py
backend/app/helpers/chat/: chat.py  commands.py  constructions.py
backend/app/schemas/: __init__.py  auth.py  base.py
backend/app/schemas/auth/: __init__.py  token.py  user.py  users.py
backend/app/schemas/chat/: __init__.py  messages.py
backend/app/schemas/table/: __init__.py  player.py  tables.py
backend/app/services/: __init__.py  auth.py  chat.py  table.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py
backend/tests/auth/: test_helpers.py
backend/tests/db/: test_mongodb.py
backend/tests/exceptions/: test_auth.py
backend/tests/helpers/auth/: test_password.py  test_token.py
backend/tests/schemas/: test_base.py
backend/tests/schemas/auth/: test_token.py  test_user.py
(+28 files in other folders)
